--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>.</title>
 </head>
 <body>
-    
+    <h1>O porquê coloquei cada música na playlist:</h1>
+    <h3><strong>Thank you - Clairo</strong></h3>
+    <p>Essa música principalmente no refrão fala sobre agradecer pelo tempo dedicado que alguém gastou com a pessoa da música e eu sinto isso também. Sinto que deveria agradecer todos os minutos que tivemos conversas existenciais ou que nós conversamos sobre o passado. Não sei, acho na verdade agradecer por >todas< as conversas, até das risadas. Gosto de quando é vulnerável por isso tento não sla, falar coisas que vão fazer você se fechar pra mim, gosto de quando você é você.</p>
+    <h3><strong>We're going to be friends - The white stripes</strong></h3>
+    <p>Toda essa música gira em torno de um ambiente escolar, e bom, acho que toda a nossa amizade gira em torno disso também, principalmente porque a gente não tentou gerar uma rotina de conversa por mensagem, então meio que ficou por isso mesmo, algo que só fica na escola, infelizmente. Mas sinto uma coisa genuína nessa música sabe, como se a gente fosse amigo de infância que vão pra escolinha e se divertem, quando eu converso com você eu me divirto igual criança então faz sentido.</p>
+    <h3><strong>My love mine all mine - Mitski</strong></h3>
+    <p>Pensei muito nessa aqui na real. Ano passado quando você não veio pra interclasse conversei com o Luci que descobri que sentia um amor incondicional por você e que essa música fazia um pouco de sentido pelo fato desse amor ser meu por mais que talvez você não tenha amor incondicional por mim.</p>
+    <h3><strong>Somewhere only we know - Keane</strong></h3>
+    <p>Acho que escolhi essa mais na vibe do começo do ano, pelo fato de que a gente comia pastel e salgado longe dos outros e sla, tava uns rolê por aí e conversava sobre uns bgl (também foi quando falei pra você que talvez mesmo que a gente não fosse mais amigo se eu falasse pra alguém de você eu iria chorar porque você foi uma pessoa que contribuiu muito na minha vida). Então sla, acho que "somewhere only we know" é nessa vibe sabe, de ir num local sem ninguém e passar tempo.</p>
+    <h3><strong>Isolated from life - Decalius</strong></h3>
+    <p>Não lembro muito, tinha um motivo específico mas não lembro :( mals
+
+        (lembrei 3 dias antes do seu aniversário, acho q pedi pra vc escolher um número de 1 a sla 20 eu acho, e vc escolheu um número e deu nessa)
+        </p>
+    <h3><strong>I will - The Beatles</strong></h3>
+    <p>Essa daí é mais sla. Pelo q eu me lembre é mais sobre o amor incondicional mesmo, a razão de msm quando a gente não se falar mais o amor vai continuar comigo ou sla, q tem uma frase da própria música: "as coisas que você faz me encantam". Bem genuína, bem bonitinha.</p>
+    <h3><strong>In a good way - Fabye Webster</strong></h3>
+    <p>"You make me wanna cry, in a good way" Acho que define aquele negócio do "chorar quando falo de você", não porque vai embora um dia mas porque foi bom a amizade em si sabe.</p>
+    <h3><strong>Stop smoking (We love you) - Car Seat Headrest</strong></h3>
+    <p>Acho que já é autoexplicativo KKK, quando descobri que você fumava lá no passado fiquei meio ? sem reação. Depois que a gente ficou mais próximo só fiquei triste que ao longo do tempo você não vai respirar direito e talvez pensar na possibilidade de te ver morrer por causa do cigarro.</p>
+    <h3><strong>High to death - Car Seat Headrest</strong></h3>
+    <p>Esse aqui como você já sabe, é a outra versão. É mais hoje em dia, não fico tão triste pelo fato de você morrer por isso porém fico um pouco mais feliz porque você tá fazendo algo porque você quer tlgd, se você sente satisfação fazendo isso, aí tá td bem, continuo aqui por você do mesmo jeito.</p>
+    <h3><strong>Luminous - Ludovico sla oq</strong></h3>
+    <p>Teve um dia que sonhei com você, e daí a gente tava vendo uma lista de músicas pra sla (???) talvez dependendo do mês q vc nasceu vc tinha uma música, e essa era a sua, vc tinha achado n tão ruim assim, eu fiquei feliz, era uma que eu conhecia.</p>
+    <h3><strong>I know you - Fabye Webster </strong></h3>
+    <p>Ela repete muito esse "I know you", sinto que conheço você, mesmo não tendo essa certeza, tenho alguns momentos guardados porque sei que você foi real e sincero e isso é especial pra mim.</p>
+    <h3><strong>Hate to see your heart break - Paramore</strong></h3>
+    <p>Antes, eu pensei que nem ia colocar ela, pq na época não fazia sentido. Porém depois de um tempo, vi vc mais cabisbaixo ao longo do tempo e daí me veio essa música na cabeça. Não tenho muito o que falar, vê a letra, e o significado dela.</p>
+    <h2>Músicas que eu desisti de colocar na playlist e seus respectivos motivos:</h2>
+    <h3>I will - Mitski</h3>
+    <p>Sim, o título é igual uma música q já tem na playlist, então sim, teria duas, com o mesmo nome. Porém tem uma parte da música meio suspeita e daí eu desencanei.</p>
+    <h3>I bet on losing Dogs - Mitski ( de novo )</h3>
+    <p>Mesmo motivo da última música, uma das poucas músicas da Mitski q tem claramente uma frase meio suspeita lá mas em geral eu ia fazer mó paralelo com você se vendo como um fracassado (losing dog) e eu acreditando em você mesmo assim.</p>
+    <p>(Tinha mais música mas esqueci sorryyy tenho cérebro desfuncional de passarinho)</p>
+    <h2>/----/----/----/</h2>
+    <p>Bom, era pra ter mais músicas, mas cê sabe, nunca vai existir uma música que descreva literalmente a sua essência na minha cabeça (a não ser q eu faça uma no futuro haha ??? seria uma ideia? n sei, talvez ano q vem, mas n crie expectativa), na verdade teve até algumas, mas sla, aparecia uns versos que não se encaixava e dai parava de fazer sentido. Porém uma coisa sobre a playlist e esse site: eu vou sempre atualizar, tipo, quando eu achar uma música nova pra colocar na playlist, vou colocar o porque coloquei ela aqui, isso é legal, pelo menos eu acho. Escolhi fazer a playlist invés de texto pra dar uma variada e também porque acho q é algo legal (??) sabendo q música é algo presente na sua vida eu acho e desculpa se eu zikei alguma música que já tinha algum significado pra você, mals.</p>
+    <p>E fun fact: tava fazendo desde julho a playlist</p>
 </body>
 </html>
