--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <p>Ela repete muito esse "I know you", sinto que conheço você, mesmo não tendo essa certeza, tenho alguns momentos guardados porque sei que você foi real e sincero e isso é especial pra mim.</p>
     <h3><strong>Hate to see your heart break - Paramore</strong></h3>
     <p>Antes, eu pensei que nem ia colocar ela, pq na época não fazia sentido. Porém depois de um tempo, vi vc mais cabisbaixo ao longo do tempo e daí me veio essa música na cabeça. Não tenho muito o que falar, vê a letra, e o significado dela.</p>
+    <h3><strong>The way things go - Beabadoobee </strong></h3>
+    <p>Eu n tenho certeza do porquê coloquei a música mas ouvindo ela da uma sensação de algo indo embora, "Can't remember how to say your name", "A distant memory I used to know", "Oh, I guess that's just the way things go", acho que é a sensação que eu sinto agora nas férias, quanto mais passa o tempo menos lembro das memórias e isso é, triste.</p>
     <h2>Músicas que eu desisti de colocar na playlist e seus respectivos motivos:</h2>
     <h3>I will - Mitski</h3>
     <p>Sim, o título é igual uma música q já tem na playlist, então sim, teria duas, com o mesmo nome. Porém tem uma parte da música meio suspeita e daí eu desencanei.</p>
