--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>O porquê coloquei cada música na playlist:</h1>
-    <iframe src="https://giphy.com/embed/BrMWSWzokeIsktBFJk" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/christmas-lights-decorations-BrMWSWzokeIsktBFJk">via GIPHY</a></p>
+    <iframe src="https://giphy.com/embed/BrMWSWzokeIsktBFJk" width="280" height="280" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     <h3><strong>Thank you - Clairo</strong></h3>
     <p>Essa música principalmente no refrão fala sobre agradecer pelo tempo dedicado que alguém gastou com a pessoa da música e eu sinto isso também. Sinto que deveria agradecer todos os minutos que tivemos conversas existenciais ou que nós conversamos sobre o passado. Não sei, acho na verdade agradecer por >todas< as conversas, até das risadas. Gosto de quando é vulnerável por isso tento não sla, falar coisas que vão fazer você se fechar pra mim, gosto de quando você é você.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0mMlo76aVZHpuvoR6fjBSK?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
