--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <h3><strong>The way things go - Beabadoobee </strong></h3>
     <p>Eu n tenho certeza do porquê coloquei a música mas ouvindo ela da uma sensação de algo indo embora, "Can't remember how to say your name", "A distant memory I used to know", "Oh, I guess that's just the way things go", acho que é a sensação que eu sinto agora nas férias, quanto mais passa o tempo menos lembro das memórias e isso é, triste.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5sA3i6SGkILMiZW6Fhx4wv?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <h3><strong>First Love / Late spring - Mitski</strong></h3>
+    <p>Tava vendo umas músicas da mitski pra aprender de novo e parei pra pensar que essa música fez e faz muito sentido como se trata de você, "Please, don't say you love me" e não só pela essa frase, mas acredito que um pouco da música inteira tem um pedaço de você. Enfim, não vou estender muito, acho que você já sabe que essa música é você.</p>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3sslYZcFKtUvIEWN9lADgr?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Músicas que eu desisti de colocar na playlist e seus respectivos motivos:</h2>
     <h3>I will - Mitski</h3>
     <p>Sim, o título é igual uma música q já tem na playlist, então sim, teria duas, com o mesmo nome. Porém tem uma parte da música meio suspeita e daí eu desencanei.</p>
