--- a/index.html
+++ b/index.html
@@ -60,19 +60,15 @@
     <p>Tava vendo umas músicas da mitski pra aprender de novo e parei pra pensar que essa música fez e faz muito sentido como se trata de você, "Please, don't say you love me" e não só pela essa frase, mas acredito que um pouco da música inteira tem um pedaço de você. Enfim, não vou estender muito, acho que você já sabe que essa música é você.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3sslYZcFKtUvIEWN9lADgr?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h3><strong>Lemon Boy - Cavetown</strong></h3>
-    <p>Tava escutando o Spotify no aleatório e do nada ele me trouxe uma música direto do porão, mas alguma coisa fez um click! E daí booom🤯 mais uma música pra playlist
-        .
-    Acho que se você ver q letra você pega uma ideia já do que eu pensei KKK
-        .
-    No começo a música fala sobre iniciar uma amizade com um garoto "cítrico" :3 e depois enfim, vai indo até que no final tem uns versos tipo:
-        -"But what if I run out of fertilizer?
-        - What if the clouds run out of rain?
-        - What if Lemon Boy won't grow no longer?
-        - What if beaches dry of sugar cane?"
-        .
-    O que na minha interpretação passa uma sensação de uma mente ansiosa tipo: "mas se a gnt brigar feio um dia?", "se a gente se afastar?", "e se nossos caminhos se separarem?". Daí foi algo que me identifiquei um pouco. Além da música ser em si sobre um Lemon boy 😼
-        .
-    Obs: agr q eu tava copiando e colando pra colocar no site, lembrei q tem um verso tipo "peguei o jeito agridoce dele", e teve umas coisas até hoje suas que me influenciam de certa forma, tanto em opiniões, tanto em coisas que você gosta e sobre a visão do mundo em si.</p>
+    <p>Tava escutando o Spotify no aleatório e do nada ele me trouxe uma música direto do porão, mas alguma coisa fez um click! E daí booom🤯 mais uma música pra playlist</p>
+    <p>Acho que se você ver q letra você pega uma ideia já do que eu pensei KKK</p>
+    <p>No começo a música fala sobre iniciar uma amizade com um garoto "cítrico" :3 e depois enfim, vai indo até que no final tem uns versos tipo:</p>
+    <p>-"But what if I run out of fertilizer?</p>
+    <p>- What if the clouds run out of rain?</p>
+    <p>- What if Lemon Boy won't grow no longer?</p>
+    <p>- What if beaches dry of sugar cane?"</p>
+    <p>O que na minha interpretação passa uma sensação de uma mente ansiosa tipo: "mas se a gnt brigar feio um dia?", "se a gente se afastar?", "e se nossos caminhos se separarem?". Daí foi algo que me identifiquei um pouco. Além da música ser em si sobre um Lemon boy 😼</p>
+    <p>Obs: agr q eu tava copiando e colando pra colocar no site, lembrei q tem um verso tipo "peguei o jeito agridoce dele", e teve umas coisas até hoje suas que me influenciam de certa forma, tanto em opiniões, tanto em coisas que você gosta e sobre a visão do mundo em si.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3Yvk0ZLxMlt6ioasvdN6vB?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Músicas que eu desisti de colocar na playlist e seus respectivos motivos:</h2>
     <h3>I will - Mitski</h3>
