--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
     <p>O que na minha interpretação passa uma sensação de uma mente ansiosa tipo: "mas se a gnt brigar feio um dia?", "se a gente se afastar?", "e se nossos caminhos se separarem?". Daí foi algo que me identifiquei um pouco. Além da música ser em si sobre um Lemon boy 😼</p>
     <p>Obs: agr q eu tava copiando e colando pra colocar no site, lembrei q tem um verso tipo "peguei o jeito agridoce dele", e teve umas coisas até hoje suas que me influenciam de certa forma, tanto em opiniões, tanto em coisas que você gosta e sobre a visão do mundo em si.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3Yvk0ZLxMlt6ioasvdN6vB?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <h3><strong>New - The Marías</strong></h3>
+    <p>Acho que agora que estamos mais distantes percebi que realmente é difícil conversar com as outras pessoas e tipo, eu fico esperando elas serem "iguais" a você, mas não são. E dai o The Marías lançou essa música no novo single deles e eu relacionei</p>
+    <p>"Baby, I promise</p>
+    <p>There's nobody new</p>
+    <p>I'm being honest</p>
+    <p>There's no one like you"</p>
+    <p>e também sinto no momento que nínguem em volta de mim tem o "potencial" pra substituir você, não digo isso em um sentido que eu tenha a vontade de te trocar, porém no sentido de que você é meu "melhor amigo" por uma razão, e a razão é que as minhas interações com as pessoas não são tão específicas igual as que eu tenho só com você.</p>
+    <p>Então "Nobody New/Nínguem Novo" é realmente sobre como não tem como eu tentar substituir a sua ausência pois é apenas perda de tempo além de uma ilusão barata.</p>
+    <p>"[...] Right here is so cold</p>
+    <p>I miss your heart."</p>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4pwJ6OujVQL3IpCr8KeXIg?utm_source=generator&theme=0" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Músicas que eu desisti de colocar na playlist e seus respectivos motivos:</h2>
     <h3>I will - Mitski</h3>
     <p>Sim, o título é igual uma música q já tem na playlist, então sim, teria duas, com o mesmo nome. Porém tem uma parte da música meio suspeita e daí eu desencanei.</p>
