--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <p>O que na minha interpretação passa uma sensação de uma mente ansiosa tipo: "mas se a gnt brigar feio um dia?", "se a gente se afastar?", "e se nossos caminhos se separarem?". Daí foi algo que me identifiquei um pouco. Além da música ser em si sobre um Lemon boy 😼</p>
     <p>Obs: agr q eu tava copiando e colando pra colocar no site, lembrei q tem um verso tipo "peguei o jeito agridoce dele", e teve umas coisas até hoje suas que me influenciam de certa forma, tanto em opiniões, tanto em coisas que você gosta e sobre a visão do mundo em si.</p>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3Yvk0ZLxMlt6ioasvdN6vB?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <h3><strong>New - The Marías</strong></h3>
+    <h3><strong>Nobody New - The Marías</strong></h3>
     <p>Acho que agora que estamos mais distantes percebi que realmente é difícil conversar com as outras pessoas e tipo, eu fico esperando elas serem "iguais" a você, mas não são. E dai o The Marías lançou essa música no novo single deles e eu relacionei</p>
     <p>"Baby, I promise</p>
     <p>There's nobody new</p>
